# $Id$

2008-03-27	Konstantin V. Arkhipov

	* core/Logic/BinaryExpression.class.php: add, substract, multiply and
	divide logic implemented in toBoolean().

	* main/Net/Http/HeaderUtils.class.php: redirect() removed, finally.

2008-03-26	Dmitry E. Demidov

	* main/Flow/HttpRequest.class.php: setFilesVar() added.

2008-03-25	Dmitry E. Demidov

	* main/Flow/HttpRequest.class.php: setByType() added.

2008-03-25	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: getArrayValue(), variety of
	getArrayVar().

	* core/Form/Primitives/PrimitiveTernary.class.php: getters for true and
	false values.

	* core/Exceptions/BadRequestException.class.php: new exception to be
	used instead of View('error').

2008-03-24	Ivan Y. Khvostishkov

	* core/Form/PlainForm.class.php: getFormId() helper for obtaining ids.

2008-03-24	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveEnumerationList.class.php,
	core/Form/Primitives/PrimitiveIdentifierList.class.php: custom clean()
	implemented.

	* meta/, main/Base/LightMetaProperty.class.php: integer's limits
	checking restored.

2008-03-20	Ivan Y. Khvostishkov

	* main/EntityProto/: ProtoBuilders renaming, s/dtoProto/entityProto/.

	* main/Utils/ArrayUtils.class.php: mergeRecursiveUnique(),
	flatToDimensional() helpers.
	
	* main/ProtoBuilders/, core/Form/: prototyped builders refactoring.

	* core/Form/Primitives/PrimitiveForm.class.php: setComposite() method
	to determine aggregation or composition of objects.

2008-03-20	Ivan Y. Khvostishkov

	* main/ProtoBuilders/FormExporter.class.php,
	main/ProtoBuilders/FormToScopeExporter.class.php: new converters.

2008-03-19	Ivan Y. Khvostishkov

	* core/Form/Primitives/BasePrimitive.class.php: dropValue() added.

2008-03-17	Ivan Y. Khvostishkov

	* main/Flow/PartViewer.class.php: references to parent and root model
	added, useful for widgets.

	* core/Base/Assert.class.php: added isEmpty(), isIndexExists(),
	isScalar().

	* main/ProtoBuilders/: more builders.
