@@ -1,0 +1,19 @@
+<?php
+/****************************************************************************
+ *   Copyright (C) 2008 by Konstantin V. Arkhipov                           *
+ *                                                                          *
+ *   This program is free software; you can redistribute it and/or modify   *
+ *   it under the terms of the GNU Lesser General Public License as         *
+ *   published by the Free Software Foundation; either version 3 of the     *
+ *   License, or (at your option) any later version.                        *
+ *                                                                          *
+ ****************************************************************************/
+/* $Id$ */
+
+	/**
+	 * In case we're soapless.
+	 * 
+	 * @ingroup Exceptions
+	**/
+	class SoapFault extends Exception {/*_*/}
+?>
